avoids copy when possible